sonar issues and formating